Changes necessary to use Kubernetes Java Client 11.0.0